--- a/obsidian-tears-fe/src/app/components/layout/main/welcome-component/welcome.component.scss
+++ b/obsidian-tears-fe/src/app/components/layout/main/welcome-component/welcome.component.scss
@@ -30,15 +30,19 @@
       width: 30%;
       z-index: 1;
       margin-top: -5%;
-      background-color: rgba(15, 41, 51, 0.5);
+      // background-color: rgba(15, 41, 51, 0.5);
+      // background-color: rgb(90, 130, 95); // - muted green
+      background-color: $primary-blue-muted-color; // - muted blue
     }
 
     .right-card {
-      height: 70vh;
+      height: 71vh;
       min-height: 650px;
-      width: 40%;
+      width: 41%;
       margin-left: -20%; // Overlap the left card by 20%
-      background-color: rgba(0, 150, 136, 0.08);
+      // background-color: rgba(15, 41, 51, 0.5);
+      // background-color: rgba(90, 130, 95, 0.7); // - muted green
+      background-color: $primary-blue-muted-mid-low-opa-color; // - muted blue
     }
 
     .mini-section {
@@ -61,11 +65,10 @@
           width: 30rem;
           height: 10rem;
           margin: 2rem;
-          filter: grayscale(30%) contrast(1.2) brightness(0.8);
+          filter: brightness(0.90);
           border-radius: 8px;
           box-shadow: 0 0 15px #fce7d0;
           transition: transform .7s ease-in-out;
-          opacity: 0.7;
 
           &:hover {
             transform: scale(1.1);
@@ -117,7 +120,6 @@
           width: 8rem;
           height: 9rem;
           margin: 2rem;
-          filter: grayscale(30%) contrast(1.2) brightness(0.8);
           border-radius: 8px;
           box-shadow: 0 0 15px #fce7d0;
           transition: transform .7s ease-in-out;
@@ -147,7 +149,7 @@
 
     .right-card-content {
       display: flex;
-      margin-left: 35%;
+      margin-left: 34%;
       flex-direction: column;
 
       .title {
@@ -178,13 +180,25 @@
           flex-direction: column;
           align-items: center;
           gap: 1rem;
+          box-shadow: 0 0 8px #fce7d0;
 
           mat-label {
             padding: 1rem;
           }
 
-          @media (max-width: $lt-lg) {
+          @media (max-width: $lt-lg2) {
             gap: .5rem;
+
+            mat-label {
+              padding: 0.2rem;
+              padding-bottom: 0;
+            }
+
+            width: 150px;
+          }
+
+          @media (max-width: $lt-lg) {
+            gap: .4rem;
 
             mat-label {
               padding: 0.1rem;
@@ -193,9 +207,6 @@
 
             width: 150px;
           }
-
-          filter: grayscale(15%) contrast(1) brightness(.7);
-          box-shadow: 0 0 8px #fce7d0;
 
           @media (max-width: $lt-sm) {
             box-shadow: none;
@@ -210,21 +221,28 @@
             }
 
             @media (min-width: $gt-lg) {
+              width: 4rem;
+            }
+
+            @media (min-width: $gt-lg1) {
+              width: 5rem;
+            }
+
+            @media (min-width: $gt-xl) {
               width: 6rem;
             }
           }
 
           &:hover {
+            transform: scale(1.04);
+            transition: transform .5s ease-in;
+
             img {
               transform: scale(1.04);
             }
-            filter: grayscale(5%) contrast(1) brightness(.9);
-            transition: transform .5s ease-in;
           }
         }
-
       }
-
 
     }
 
