--- a/obsidian-tears-fe/src/app/components/layout/footer-component/footer.component.scss
+++ b/obsidian-tears-fe/src/app/components/layout/footer-component/footer.component.scss
@@ -4,11 +4,11 @@
 
 .footer-container {
     font-family: 'minecraft-font', sans-serif;
-    background: rgba(25, 25, 25, 0.5);
+    background: $primary-brown-dark-low-opa-color;
     margin-top: 4rem;
     padding: .5rem 2rem 0 2rem;
     height: $footer-height;
-    color: $primary-obsidian-light;
+    color: whitesmoke;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,26 +39,26 @@
         }
 
         li {
-            text-align: center;        
+            text-align: center;
         }
 
         a {
             padding: 1rem;
             text-decoration: none;
-            color: $primary-obsidian-light;
+            color: $primary-blue-lighter-color;
             display: flex;
             flex-direction: column;
             align-items: center;
             gap: .5rem;
 
             &:hover {
-                background-color: rgba($primary-midnight-blue, 0.1);
-                color: lighten($primary-obsidian-light, 20%);
+                background-color: rgba($primary-deep-crimson, 0.2);
+                color: $primary-blue-light-color;
 
                 img {
-                    transform: scale(1.04);
+                    transform: scale(1.06);
                 }
-              }
+            }
         }
 
         img {
@@ -92,9 +92,15 @@
         font-weight: 300;
         grid-column: span 4;
         font-size: .75rem;
-        // margin-block-start: 1rem;
         padding: .5rem .5rem .2rem .5rem;
-        position: relative; bottom: 0; width:100%; text-align: center
+        position: relative;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
+
+        &:hover {
+            color: $primary-blue-grey-color;
+        }
     }
 
     @media (max-width: $lt-sm-md) {
