--- a/obsidian-tears-fe/src/app/components/layout/layout-component/layout.component.scss
+++ b/obsidian-tears-fe/src/app/components/layout/layout-component/layout.component.scss
@@ -29,17 +29,26 @@ mat-sidenav-content {
 
     display: flex;
     flex-direction: column;
-    background: rgba(25, 25, 25, 0.7);
+    background-color: $primary-blue-mid-low-opa-color;
   }
 
   .app-main-container {
     flex: 1;
     padding: 1.5rem 32px;
-    color: $primary-obsidian-light;
+    // color: $primary-yellow-color;
+    color: $primary-blue-lighter-color;
     font-size: 1.125rem;
 
     @media (max-width: $lt-sm) {
       padding: 1.5rem 16px;
+    }
+
+    @media(max-height: $lt-sm-md-vh) {
+      padding: 0.5rem 32px;
+    }
+
+    @media (max-width: $lt-sm) and (max-height: $lt-sm-md-vh) {
+      padding: 0.5rem 16px;
     }
   }
 }
@@ -56,7 +65,7 @@ mat-sidenav-content {
       min-height: 100vh;
       display: flex;
       flex-direction: column;
-      background: rgba(25, 25, 25, 0.7);
+      background: $primary-brown-dark-low-opa-color;
     }
   }
 }
