--- a/obsidian-tears-fe/src/app/shared/components/nav-items-list.component/nav-items-list.component.scss
+++ b/obsidian-tears-fe/src/app/shared/components/nav-items-list.component/nav-items-list.component.scss
@@ -32,7 +32,7 @@
     width: 100%;
 
     button {
-      margin-bottom: 50px;
+      margin-bottom: 26px;
     }
 
     align-items: center;
@@ -58,7 +58,7 @@
 
     .logo-txt {
       width: 100%;
-      margin-bottom: 50px;
+      margin-bottom: 28px;
     }
 
     .toolbar-title {
@@ -69,12 +69,12 @@
 
       text-align: center;
       line-height: normal;
-      color: lighten($primary-deep-crimson, 14%);
+      color: $primary-brown-light-color;
       font-size: 1rem;
       padding-top: 0;
 
       &:hover {
-        color: lighten($primary-deep-crimson, 20%);
+        color: $primary-brown-color;
       }
     }
 
@@ -86,23 +86,31 @@
 }
 
 .navig-item {
-  color: $primary-obsidian-light;
+  @media (max-width: $lt-sm-md) {
+    margin: .5rem;
+  }
+
+  @media(max-height: $lt-sm-md-vh) {
+    margin: .1rem;
+  }
+
+  color: whitesmoke;
+  img {
+    filter: grayscale(100%);
+  }
 
   &:hover {
-    color: whitesmoke;
+    color: $primary-blue-grey-color;
     cursor: pointer;
-    fill: whitesmoke;
 
     img {
-      filter: grayscale(100%) brightness(120%);
+      filter: grayscale(0%);
     }
   }
 }
 
 ul {
-  font-family: 'pixeled-font', sans-serif; // font for the buttons on the sidenav
-
-  color: $primary-obsidian-light;
+  font-family: 'pixeled-font', sans-serif; // font for the buttons on the sidenav and top nav
   padding: 0;
   margin: 0 16px;
   list-style: none;
@@ -141,12 +149,6 @@ ul {
 
   @media (max-width: $lt-sm-md) {
     flex-direction: column;
-  }
-
-  a {
-    &.icon {
-      // color: yellow;
-    }
   }
 
 }
@@ -200,10 +202,8 @@ ul {
   }
 }
 
-
-
-
-// Animation
+///////////////////////////////////////////////////
+// Animation /////////////////////////////////////
 
 @keyframes widerRotate {
   0% {
