--- a/obsidian-tears-fe/src/app/styles/global-styles.scss
+++ b/obsidian-tears-fe/src/app/styles/global-styles.scss
@@ -8,43 +8,49 @@
 // HEADER STYLE
 .app-global-header {
     // font-family: 'Press Start 2P', cursive;
-    font-family: 'edunline-font', sans-serif;
-    font-size: 26px;
+    // font-family: 'edunline-font', sans-serif;
+    font-family: 'pixeled-font', sans-serif;
+    font-size: 23px;
     text-align: center;
-    letter-spacing: 2px;
-    // text-transform: uppercase;
+    letter-spacing: 1.5px;
     text-shadow: 2px 2px 0px #333;
-    color: #3f85a3;
+    color: $primary-brown-light-color;
+    background-color: $primary-brown-light-mid-opa-color;
+
     padding: 0rem 1rem 1rem 1rem;
 
     @media (max-width: $lt-lg1) {
-        font-size: 22px;
+        font-size: 19px;
     }
 
     @media (max-width: $lt-sm-md) {
-        font-size: 16px;
+        font-size: 13px;
+    }
+
+    @media (max-width: $lt-sm) {
+        font-size: 11px;
     }
 }
 
 // SUB HEADER STYLE
 .app-global-sub-header {
-    font-family: 'edunline-font', sans-serif;
+    font-family: 'pixeled-font', sans-serif;
     font-size: 19px;
     text-align: center;
     letter-spacing: 2px;
-    // text-transform: uppercase;
     text-shadow: 2px 2px 0px #171616;
-    color: #32718c;
-
+    color: $primary-brown-color;
     padding: 0rem 1rem 1rem 1rem;
     padding-top: 1rem;
 
     @media (max-width: $lt-lg1) {
         font-size: 16px;
     }
-
     @media (max-width: $lt-sm-md) {
-        font-size: 13px;
+        font-size: 12px;
+    }
+    @media (max-width: $lt-sm) {
+        font-size: 9px;
     }
 }
 
@@ -56,9 +62,19 @@
     align-items: center;
 }
 
+// mat-label
 mat-label {
+    @media (max-width: $lt-lg1) {
+        font-size: 16px;
+    }
+    @media (max-width: $lt-lg) {
+        font-size: 15px;
+    }
     @media (max-width: $lt-sm-md) {
         font-size: 12px;
+    }
+    @media (max-width: $lt-sm) {
+        font-size: 10px;
     }
 }
 
@@ -66,12 +82,11 @@ mat-label {
 // LINK STYLE
 a {
     text-decoration: none;
-    color: #32718c;
+    color: $primary-brown-red-color;
 
     &:hover,
     &:active {
-        color: #3c94b9;
-
+        color: $primary-brown-red-light-color;
     }
 
     @media (max-width: $lt-sm-md) {
@@ -87,29 +102,28 @@ a {
 }
 
 .curtain {
+    /* Animation duration and easing */
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 0;
-    background-color: rgba($primary-deep-crimson, 0.4);
-    /* Blue with 50% opacity */
+    background-color: rgba($primary-deep-crimson, 0.7);
     transition: height 0.5s ease;
-    /* Animation duration and easing */
     z-index: 10;
 }
 
 .curtain-content {
+    /* Higher z-index than the curtain */
     padding: .25rem;
     position: relative;
     z-index: 20;
-    /* Higher z-index than the curtain */
 }
 
 /* Hover effect */
 .curtain-container:hover .curtain {
-    height: 100%;
     /* Expand the curtain on hover */
+    height: 100%;
     z-index: 10;
 }
 
