--- a/obsidian-tears-fe/src/app/styles/viewports.scss
+++ b/obsidian-tears-fe/src/app/styles/viewports.scss
@@ -1,3 +1,4 @@
+/////////////////////////
 // Viewport Width (VW)
 $lt-xs: 399px; //'screen (max-width: 399px);
 $lt-sm: 599px; //'screen (max-width: 599px);
@@ -6,6 +7,7 @@ $lt-md: 959px; //'screen (max-width: 959px);
 $lt-md1: 1059px; //'screen (max-width: 1059px);
 $lt-lg: 1279px; //'screen (max-width: 1279px);
 $lt-lg1: 1479px; //'screen (max-width: 1479px);
+$lt-lg2: 1579px; //'screen (max-width: 1479px);
 $lt-xl: 1919px; //'screen (max-width: 1919px);
 
 $gt-sm: 600px; //'screen (min-width: 600px);
@@ -13,8 +15,10 @@ $gt-sm-md: 860px; //'screen (min-width: 860px);  // exchange point
 $gt-md: 960px; //'screen (min-width: 960px);
 $lt-md1: 1060px; //'screen (min-width: 1060px);
 $gt-lg: 1280px; //'screen (min-width: 1280px);
+$gt-lg1: 1480px; //'screen (min-width: 1280px);
 $gt-xl: 1920px; //'screen (min-width: 1920px);
 
 
+/////////////////////////
 // Viewport Height (VH)
-$lt-sm-md-vh: 829px;
+$lt-sm-md-vh: 829px; //'screen (max-height: 829px);
