downgrades swiper package dependency, adds artifact almanac page content, adds cube swipe component, adds thumbs gallery swiper component, adds no results found component, updates page not found folder name, adds swiper service class, adds global swiper class, updates/fixes project styles, adds images to project

--- a/obsidian-tears-fe/src/app/components/layout/header-component/header.component.html
+++ b/obsidian-tears-fe/src/app/components/layout/header-component/header.component.html
@@ -3,10 +3,10 @@
     <div class="add-space-container">
       <div class="li-container">
         <li class="icon-menu-container">
-          <div class="icon logo" [@logoAnimation]="isMovingStar()">
+          <div class="icon logo" [@logoAnimation]="isRotating()">
             <a routerLink="/welcome" routerLinkActive="active-router-link" (mouseover)="showMovingLogo = true"
               (mouseout)="showMovingLogo = false"><img id="toolbar-image"
-                src="../../../../../assets/img/abstract-retro-game.png" />
+                src="../../../../../assets/img/abstract-retro-game.svg" />
             </a>
           </div>
           <button mat-icon-button color="primary" class="menu-btn navig-item" (click)="inputSideNav?.toggle()" >
