--- a/obsidian-tears-fe/src/app/styles/colors.scss
+++ b/obsidian-tears-fe/src/app/styles/colors.scss
@@ -30,6 +30,7 @@ $primary-brown-dark-color: rgb(40 28 30);
 $primary-brown-dark-low-opa-color: rgba(40, 28, 30, .9);
 
 $primary-brown-orange-color: rgb(139, 69, 19);
+$primary-brown-light-orange-color: rgb(222, 127, 59);
 
 $primary-brown-red-color: rgb(116 73 60);
 $primary-brown-red-light-color: rgb(147 95 87);
