--- a/obsidian-tears-fe/src/app/styles/viewports.scss
+++ b/obsidian-tears-fe/src/app/styles/viewports.scss
@@ -2,6 +2,7 @@
 // Viewport Width (VW)
 $lt-xs: 399px; //'screen (max-width: 399px);
 $lt-sm: 599px; //'screen (max-width: 599px);
+$lt-sm1: 699px; //'screen (max-width: 699px);
 $lt-sm-md: 859px; //'screen (max-width: 859px); // exchange point
 $lt-md: 959px; //'screen (max-width: 959px);
 $lt-md1: 1059px; //'screen (max-width: 1059px);
