--- a/obsidian-tears-fe/src/app/components/layout/main/game-component/game.component.scss
+++ b/obsidian-tears-fe/src/app/components/layout/main/game-component/game.component.scss
@@ -31,7 +31,7 @@
     // background-color: rgba(15, 41, 51, 0.5); - cool green
     // background-color: rgba(90, 130, 95, 0.7); // - muted green
     background-color: $primary-blue-muted-mid-low-opa-color; // - muted blue
-    box-shadow: 0 0 0 1px $primary-deep-crimson;
+    box-shadow: 0 0 0 1px $primary-brown-color;
 
     p {
         font-size: 16px;
@@ -53,5 +53,9 @@
         @media (max-width: $lt-sm-md) {
             font-size: 11px;
         }
+    }
+
+    app-cube-swiper {
+        width: 100%;
     }
 }
