--- a/obsidian-tears-fe/src/app/components/layout/main/welcome-component/welcome.component.scss
+++ b/obsidian-tears-fe/src/app/components/layout/main/welcome-component/welcome.component.scss
@@ -21,7 +21,7 @@
 
     .card {
       flex-grow: 1;
-      box-shadow: 0 0 0 1px $primary-deep-crimson;
+      box-shadow: 0 0 0 1px $primary-brown-color;
     }
 
     .left-card {
