--- a/obsidian-tears-fe/src/app/shared/components/nav-items-list.component/nav-items-list.component.scss
+++ b/obsidian-tears-fe/src/app/shared/components/nav-items-list.component/nav-items-list.component.scss
@@ -74,7 +74,7 @@
       padding-top: 0;
 
       &:hover {
-        color: $primary-brown-color;
+        color: $primary-brown-orange-color;
       }
     }
 
