adds images, updates styles, finalizes the governance page

--- a/obsidian-tears-fe/src/app/components/layout/header-component/header.component.html
+++ b/obsidian-tears-fe/src/app/components/layout/header-component/header.component.html
@@ -6,7 +6,7 @@
           <div class="icon logo" [@logoAnimation]="isRotating()">
             <a routerLink="/welcome" routerLinkActive="active-router-link" (mouseover)="showMovingLogo = true"
               (mouseout)="showMovingLogo = false"><img id="toolbar-image"
-                src="../../../../../assets/img/abstract-retro-game.svg" />
+                src="../../../../../assets/img/abstract-retro-game-100.png" />
             </a>
           </div>
           <button mat-icon-button color="primary" class="menu-btn navig-item" (click)="inputSideNav?.toggle()" >
